overflow fix

--- a/Div_Mentor/Apple/css/style1.css
+++ b/Div_Mentor/Apple/css/style1.css
@@ -2,8 +2,9 @@
     font-size: 18px !important;
     font-weight: 400 !important;
 }
-header, main, footer {
+header, nav, main, footer {
     overflow-x: hidden !important;
+    width: 100% !important;
 }
 .ekran {
     font-size: 20px !important;
